<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletFragment">

    <Button
        android:id="@+id/btn_requests"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/friends_recycler_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="199dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="Requests"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:id="@+id/btn_friends"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/friends_recycler_view"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="Friends"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/friends_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="497dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:scrollbars="vertical" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/requests_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="497dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:scrollbars="vertical" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addfriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="35dp"
        android:src="@drawable/outline_person_add_white_18dp"
        app:backgroundTint="@color/colorPrimary" />

</RelativeLayout>