<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/friends"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_bank"
        android:icon="@drawable/bank"
        android:title="@string/title_bank" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/wallet"
        android:title="@string/title_wallet" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/leaderboard"
        android:title="@string/title_leaderboard" />
</menu>
