<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="20dp">

    <Button
        android:id="@+id/decline"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/friends_name"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="-15dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="Decline"
        android:textSize="10sp" />

    <Button
        android:id="@+id/accept"
        android:layout_width="76dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/friends_name"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="-15dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="Accept"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/friends_name"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="0dp"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/friends_email"
        android:layout_width="202dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:textSize="12sp"
        android:textStyle="bold" />

</RelativeLayout>